package sdkv2alphalib

// Standard request field names
const (
	AIM                           = "A-IM"
	Accept                        = "Accept"
	AcceptCH                      = "Accept-CH"
	AcceptCharset                 = "Accept-Charset"
	AcceptDatetime                = "Accept-Datetime"
	AcceptEncoding                = "Accept-Encoding"
	AcceptLanguage                = "Accept-Language"
	AcceptPatch                   = "Accept-Patch"
	AcceptRanges                  = "Accept-Ranges"
	AccessControlAllowCredentials = "Access-Control-Allow-Credentials"
	AccessControlAllowHeaders     = "Access-Control-Allow-Headers"
	AccessControlAllowMethods     = "Access-Control-Allow-Methods"
	AccessControlAllowOrigin      = "Access-Control-Allow-Origin"
	AccessControlExposeHeaders    = "Access-Control-Expose-Headers"
	AccessControlMaxAge           = "Access-Control-Max-Age"
	AccessControlRequestHeaders   = "Access-Control-Request-Headers"
	AccessControlRequestMethod    = "Access-Control-Request-Method"
	Age                           = "Age"
	Allow                         = "Allow"
	AltSvc                        = "Alt-Svc"
	Authorization                 = "Authorization"
	CacheControl                  = "Cache-Control"
	Connection                    = "Connection"
	ContentDisposition            = "Content-Disposition"
	ContentEncoding               = "Content-Encoding"
	ContentLanguage               = "Content-Language"
	ContentLength                 = "Content-Length"
	ContentLocation               = "Content-Location"
	ContentMD5                    = "Content-MD5"
	ContentRange                  = "Content-Range"
	ContentType                   = "Content-Type"
	Cookie                        = "Cookie"
	Date                          = "Date"
	DeltaBase                     = "Delta-Base"
	ETag                          = "ETag"
	Expect                        = "Expect"
	Expires                       = "Expires"
	Forwarded                     = "Forwarded"
	From                          = "From"
	Host                          = "Host"
	IM                            = "IM"
	IfMatch                       = "If-Match"
	IfModifiedSince               = "If-Modified-Since"
	IfNoneMatch                   = "If-None-Match"
	IfRange                       = "If-Range"
	IfUnmodifiedSince             = "If-Unmodified-Since"
	LastModified                  = "Last-Modified"
	Link                          = "Link"
	Location                      = "Location"
	MaxForwards                   = "Max-Forwards"
	Origin                        = "Origin"
	P3P                           = "P3P"
	PreferenceApplied             = "Preference-Applied"
	Prefer                        = "Prefer"
	ProxyAuthenticate             = "Proxy-Authenticate"
	ProxyAuthorization            = "Proxy-Authorization"
	PublicKeyPins                 = "Public-Key-Pins"
	Range                         = "Range"
	Referer                       = "Referer"
	RetryAfter                    = "Retry-After"
	Server                        = "Server"
	SetCookie                     = "Set-Cookie"
	StrictTransportSecurity       = "Strict-Transport-Security"
	TransferEncoding              = "Transfer-Encoding"
	Tk                            = "Tk"
	Upgrade                       = "Upgrade"
	UserAgent                     = "User-Agent"
	Vary                          = "Vary"
	Via                           = "Via"
	Warning                       = "Warning"
	WWWAuthenticate               = "WWW-Authenticate"
	XFrameOptions                 = "X-Frame-Options"
	Http2Settings                 = "Http2-Settings"
)

const (
	GrpcAcceptEncoding = "Grpc-Accept-Encoding"
	GrpcEncoding       = "Grpc-Encoding"
	GrpcStatus         = "Grpc-Status"
	GrpcMessage        = "Grpc-Message"
	GrpcTimeout        = "Grpc-Timeout"
	Te                 = "Te"
	Trailer            = "Trailer"
)

// Common non-standard field names
const (
	ContentSecurityPolicy   = "Content-Security-Policy"
	CorrelationID           = "Correlation-ID"
	DNT                     = "DNT"
	ExpectCT                = "Expect-CT"
	FrontEndHttps           = "Front-End-Https"
	NEL                     = "NEL"
	PermissionsPolicy       = "Permissions-Policy"
	ProxyConnection         = "Proxy-Connection"
	Refresh                 = "Refresh"
	ReportTo                = "Report-To"
	SaveData                = "Save-Data"
	Status                  = "Status"
	TimingAllowOrigin       = "Timing-Allow-Origin"
	UpgradeInsecureRequests = "Upgrade-Insecure-Requests"
	XAttDeviceId            = "X-ATT-DeviceId"
	XContentDuration        = "X-Content-Duration"
	XContentSecurityPolicy  = "X-Content-Security-Policy"
	XContentTypeOptions     = "X-Content-Type-Options"
	XCorrelationID          = "X-CorrelationID"
	XCsrfToken              = "X-Csrf-Token"
	XForwardedFor           = "X-Forwarded-For"
	XForwardedHost          = "X-Forwarded-Host"
	XForwardedProto         = "X-Forwarded-Proto"
	XHttpMethodOverride     = "X-Http-Method-Override"
	XPoweredBy              = "X-Powered-By"
	XRedirectBy             = "X-Redirect-By"
	XRequestedWith          = "X-Requested-With"
	XRequestID              = "X-Request-ID"
	XUAcompatible           = "X-UA-Compatible"
	XXSSProtection          = "X-XSS-Protection"
	XWapProfile             = "X-Wap-Profile"
	XWebKitCSP              = "X-WebKit-CSP"
	XUidh                   = "X-UIDH"
)

const (
	XCorrelationId          = "X-Correlation-Id"
	XClientTraceId          = "X-Client-Trace-Id"
	XB3Traceid              = "X-B3-Traceid"
	XB3Spanid               = "X-B3-Spanid"
	XB3Parentspanid         = "X-B3-Parentspanid"
	XB3Sampled              = "X-B3-Sampled"
	XB3Flags                = "X-B3-Flags"
	XSpecRouterKey          = "X-Spec-Router-Key"
	XSpecEnvironment        = "X-Spec-Environment"
	XSpecPlatformHost       = "X-Spec-Platform-Host"
	XSpecSentAt             = "X-Spec-Sent-At"
	XSpecLocale             = "X-Spec-Locale"
	XSpecTimezone           = "X-Spec-Timezone"
	XSpecApiKey             = "X-Spec-Apikey"
	XSpecOrganization       = "X-Spec-Organization-Slug"
	XSpecWorkspace          = "X-Spec-Workspace-Slug"
	XSpecWorkspaceJan       = "X-Spec-Workspace-Jan"
	XSpecValidateOnly       = "X-Spec-Validate-Only"
	XSpecFieldmask          = "X-Spec-Fieldmask"
	XSpecDeviceId           = "X-Spec-Device-Id"
	XSpecDeviceAdvId        = "X-Spec-Device-Adv-Id"
	XSpecDeviceManufacturer = "X-Spec-Device-Manufacturer"
	XSpecDeviceModel        = "X-Spec-Device-Model"
	XSpecDeviceName         = "X-Spec-Device-Name"
	XSpecDeviceType         = "X-Spec-Device-Type"
	XSpecDeviceToken        = "X-Spec-Device-Token"
	XSpecDeviceBluetooth    = "X-Spec-Bluetooth"
	XSpecDeviceCellular     = "X-Spec-Cellular"
	XSpecDeviceWifi         = "X-Spec-Wifi"
	XSpecDeviceCarrier      = "X-Spec-Carrier"
	XSpecOsName             = "X-Spec-Os-Name"
	XSpecOsVersion          = "X-Spec-Os-Version"
)

const (
	ConnectProtocolVersion = "Connect-Protocol-Version"
	ConnectTimeoutMs       = "Connect-Timeout-Ms"
)

const (
	SecChPrefersColorScheme         = "Sec-Ch-Prefers-Color-Scheme"
	SecChPrefersReducedMotion       = "Sec-Ch-Prefers-Reduced-Motion"
	SecChPrefersReducedTransparency = "Sec-Ch-Prefers-Reduced-Transparency"
	SecChUa                         = "Sec-Ch-Ua"
	SecChUaArch                     = "Sec-Ch-Ua-Arch"
	SecChUaBitness                  = "Sec-Ch-Ua-Bitness"
	SecChUaFullVersionList          = "Sec-Ch-Ua-Full-Version-List"
	SecChUaMobile                   = "Sec-Ch-Ua-Mobile"
	SecChUaModel                    = "Sec-Ch-Ua-Model"
	SecChUaPlatform                 = "Sec-Ch-Ua-Platform"
	SecChUaPlatformVersion          = "Sec-Ch-Ua-Platform-Version"
	SecFetchDest                    = "Sec-Fetch-Dest"
	SecFetchMode                    = "Sec-Fetch-Mode"
	SecFetchSite                    = "Sec-Fetch-Site"
	SecGpc                          = "Sec-Gpc"
	SecPurpose                      = "Sec-Purpose"
	SecWebsocketAccept              = "sec-websocket-accept"
	SecWebsocketExtensions          = "sec-websocket-extensions"
	SecWebsocketKey                 = "sec-websocket-key"
	SecWebsocketProtocol            = "sec-websocket-protocol"
	SecWebsocketVersion             = "sec-websocket-version"
)
